# shade

./: AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.override.yml  docker-compose.yml  pyproject.toml  test_cvm.py
.github/scripts/: update_versions_digest.py
.github/workflows/: build-push-attestation-service.yml  build-push-auth-service.yml  build-push-cert-manager.yaml  shade-tests.yml
services/attestation-service/: .dockerignore  Makefile  README.md  attestation_service.py  attestation_service_with_debug.py  entrypoint.sh  pyproject.toml  test_service.py
services/attestation-service/tests/: conftest.py  test_ekm_validation.py  test_mock_attestation.py  test_model_validation.py  test_report_data.py
services/cert-manager/: .dockerignore  Dockerfile  entrypoint.sh  render_nginx_conf.py
services/cert-manager/nginx_conf/: base.conf.tmpl  https-dev.conf.tmpl  https.conf.tmpl
services/cert-manager/ngx_http_ekm_module/: config  ngx_http_ekm_module.c
services/cert-manager/src/cert_manager/: cmgr.py  main.py
services/cert-manager/tests/: test_cmgr.py
src/shade/: __init__.py  api.py  cli.py  compose.py  config.py  generator.py  policy.py  verify.py  versions.py
src/shade/templates/: shade.yml
tests/: test_api.py  test_atlas_integration.py  test_cli.py  test_compose.py  test_config.py  test_generator.py  test_policy.py  test_verify.py  test_versions.py
